# LufthansaChatbot

./: README  README.md  docker-compose.yml  embed_chunked_text.py  prepare_textual_material.py  requirements-lufthansa-chatbot.txt  xlsx_to_csv.py
chatbot_api/: Dockerfile  pyproject.toml
chatbot_api/chains/: aktionaersinfos_retrieval_chain.py
chatbot_api/chroma_aktionaersinfos/: meine_fragen.txt
chatbot_api/src/: entrypoint.sh  main.py  manual_chatbot_test_script.py  manual_test_batch.py  meine_fragen.txt  meine_fragen_2.txt
chatbot_api/src/agents/: lufthansa_rag_agent.py
chatbot_api/src/chains/: aktionaersinfos_retrieval_chain.py  lufthansa_chatty_chain.py  lufthansa_cypher_chain.py
chatbot_api/src/models/: lufthansa_retrieval_query.py
chatbot_api/src/utils/: async_utils.py
chatbot_frontend/: Dockerfile
chatbot_frontend/src/: entrypoint.sh  main.py
chroma_etl/: Dockerfile  pyproject.toml
chroma_etl/src/: entrypoint.sh  get_text_from_word.py  prepare_textual_material.py  split_txt_material.py
chroma_etl/src/data/: Aktionaersinfos-2017.docx  Aktionaersinfos-2018.docx  Aktionaersinfos-2020.docx  Aktionaersinfos-2021.docx
data/: aggregate.csv  aggregate.xlsx  aktie.csv  aktie.xlsx  leistungsdaten.csv  leistungsdaten.xlsx  umsatz_ergebnis.csv  umsatz_ergebnis.xlsx
lufthansa_neo4j_etl/: Dockerfile  pyproject.toml
lufthansa_neo4j_etl/src/: entrypoint.sh  lufthansa_bulk_csv_write.py
test_catalog_and_results/: Lufthansa Chatbot - Tests Questions - Experiments - Results.xlsx
tests/: async_agent_requests.py  sync_agent_requests.py
