[project]
name = "chatbot_api"
version = "0.1"
dependencies = [
    "asyncio==3.4.3",
    "chroma-hnswlib==0.7.3",
    "chromadb==0.4.22",
    "fastapi==0.114.0",
    "langchain==0.3.3",
    "langchain-chroma==0.1.4",
    "langchain-community==0.3.2",
    "langchain-openai==0.2.2",
    "langchainhub==0.1.14",
    "neo4j==5.24.0",
    "numpy==1.26.4",
    "openai==1.55.3",
    "opentelemetry-api==1.27.0",
    "pydantic==2.8.2",
    "uvicorn==0.30.6"
]

[project.optional-dependencies]
dev = ["black", "flake8"]